--- a/index.html
+++ b/index.html
@@ -50,9 +50,72 @@
 </style>
 </head>
 <body>
-<!-- 你的 header、tabs、總覽、裝備清單全部不變，省略貼上 -->
+<div class="header">
+    <h1>2026 札幌雪祭 7 天完美行程（最終版）</h1>
+    <p style="font-size:1.5rem;">1月30日 – 2月5日　｜　盤溪滑雪場 + 狸小路夜景 + 藻岩山夜景</p>
+</div>
 
-<!-- 只貼出改動的 <script> 部分，其餘完全相同 -->
+<div class="tabs">
+    <div class="tab-btn active" onclick="openTab('overview')">總覽</div>
+    <div class="tab-btn" onclick="openTab('details')">詳細日程表</div>
+    <div class="tab-btn" onclick="openTab('packing')">裝備清單</div>
+</div>
+
+<!-- 總覽 -->
+<div id="overview" class="content active">
+    <div style="max-width:900px;margin:0 auto;">
+        <div class="day"><h2>1月30日 (五) Day 1　抵達＋電視塔夜景</h2><button class="big-btn" onclick="showDetail(1)">查看詳細時間軸</button></div>
+        <div class="day"><h2>1月31日 (六) Day 2　盤溪滑雪場＋狸小路夜景</h2><button class="big-btn" onclick="showDetail(2)">查看詳細時間軸</button></div>
+        <div class="day"><h2>2月1日 (日) Day 3　盤溪滑雪場＋藻岩山夜景</h2><button class="big-btn" onclick="showDetail(3)">查看詳細時間軸</button></div>
+        <div class="day"><h2>2月2日 (一) Day 4　定山溪溫泉放空</h2><button class="big-btn" onclick="showDetail(4)">查看詳細時間軸</button></div>
+        <div class="day"><h2>2月3日 (二) Day 5　小樽運河浪漫一日</h2>
+            <p style="color:#8B4513;margin:1rem 0;">下午茶：LeTAO 本店雙層起司蛋糕　｜　晚餐：小樽世壺屋</p>
+            <button class="big-btn" onclick="showDetail(5)">查看詳細時間軸</button>
+        </div>
+        <div class="day" style="border-left:16px solid #e74c3c;"><h2>2月4日 (三) Day 6　2026雪祭開幕日全天狂歡！</h2><button class="big-btn" style="background:#e74c3c;color:white;" onclick="showDetail(6)">立即查看雪祭時間軸</button></div>
+        <div class="day"><h2>2月5日 (四) Day 7　掃貨＋返程</h2><button class="big-btn" onclick="showDetail(7)">查看詳細時間軸</button></div>
+    </div>
+    <div style="text-align:center;margin:4rem;">
+        <h2>2026 雪祭7天總預算（HK$）</h2>
+        人數 <input type="number" id="p" value="2" min="1" style="padding:0.8rem;width:100px;">
+        <button onclick="calc()" style="background:#FFD700;padding:1rem 2.5rem;border:none;border-radius:12px;margin-left:1rem;font-size:1.3rem;cursor:pointer;">計算</button>
+        <p id="out" style="font-size:3.5rem;margin:2rem;font-weight:bold;color:#c0392b;">HK$14,200（2人）</p>
+    </div>
+</div>
+
+<!-- 詳細日程表 -->
+<div id="details" class="content">
+    <div id="detail-content" style="max-width:1000px;margin:0 auto;"></div>
+</div>
+
+<!-- 裝備清單 -->
+<div id="packing" class="content packing-list">
+    <h2 style="text-align:center;color:#2c3e50;">北海道1月底-2月初 裝備清單（極寒+滑雪）</h2>
+    <div style="text-align:center;">
+        <button id="savePacking" class="save-btn">儲存目前勾選狀態</button>
+        <button id="loadPackingBtn" class="load-btn">載入上次儲存的狀態</button>
+        <button id="clearPacking" class="clear-btn">取消全部勾選（保留備份）</button>
+        <p style="font-size:0.9rem;color:#666;margin-top:0.5rem;">儲存後即使關閉瀏覽器，下次打開仍會自動恢復</p>
+    </div>
+    <ul>
+        <li><input type="checkbox" class="pack-item"> 極厚羽絨服（-20°C等級）</li>
+        <li><input type="checkbox" class="pack-item"> 保暖內層（HeatTech極暖）</li>
+        <li><input type="checkbox" class="pack-item"> 抓絨中層</li>
+        <li><input type="checkbox" class="pack-item"> 防水滑雪褲／雪褲</li>
+        <li><input type="checkbox" class="pack-item"> 防水雪靴（Sorel / The North Face）</li>
+        <li><input type="checkbox" class="pack-item"> 滑雪手套（防水＋內刷毛）</li>
+        <li><input type="checkbox" class="pack-item"> 毛帽／護耳帽</li>
+        <li><input type="checkbox" class="pack-item"> 圍巾或脖圍（Buff）</li>
+        <li><input type="checkbox" class="pack-item"> 雪鏡／護目鏡（滑雪用）</li>
+        <li><input type="checkbox" class="pack-item"> 暖暖包（大量！）</li>
+        <li><input type="checkbox" class="pack-item"> 保濕面霜／護手霜（防凍傷）</li>
+        <li><input type="checkbox" class="pack-item"> 行動電源（低溫易掉電）</li>
+        <li><input type="checkbox" class="pack-item"> 泳裝（溫泉用）</li>
+        <li><input type="checkbox" class="pack-item"> 替換厚襪（美利奴羊毛最佳）</li>
+        <li><input type="checkbox" class="pack-item"> 護唇膏 + 鼻噴劑</li>
+    </ul>
+</div>
+
 <script>
 function openTab(tab){
     document.querySelectorAll('.content').forEach(c=>c.classList.remove('active'));
@@ -130,7 +193,7 @@ function showDetail(day){
         <div class="step"><span class="time">10:00 – 22:00</span>　大通公園＋薄野會場＋Tsudome</div>
         <div style="text-align:center;margin:1.5rem 0;">
             <a href="https://www.snowfes.com/en/" target="_blank" class="ticket-link">2026札幌雪祭官方網站（英文）</a><br>
-            <a href="https://www.klookurayama.com/en/" target="_blank" class="ticket-link">大倉山跳台雪雕夜間點燈（特別推薦！）</a>
+            <a href="https://www.klook.com/zh-HK/activity/12748-okurayama-viewing-point-sapporo/" target="_blank" class="ticket-link">大倉山跳台雪雕夜間點燈（特別推薦！）</a>
         </div>
         <div class="links"><a href="https://www.google.com/maps/place/Odori+Park" target="_blank" class="location-link">大通公園雪祭地圖</a></div></div>`,
 
@@ -144,7 +207,7 @@ function showDetail(day){
             <a href="https://www.new-chitose-airport.jp/en/" target="_blank" class="ticket-link">新千歲機場官方網站（英文／中文）</a><br>
             <a href="https://www.new-chitose-airport.jp/en/shop/" target="_blank" class="ticket-link">機場商店地圖＋優惠券</a>
         </div></div>`
-};
+    };
 
     document.getElementById('detail-content').innerHTML = details[day];
     openTab('details');
@@ -157,7 +220,7 @@ function calc(){
 }
 calc();
 
-// 裝備清單功能（已修正版，不會誤刪備份）
+// 裝備清單功能（已修正，不會誤刪備份）
 const checkboxes = document.querySelectorAll('.pack-item');
 const saveBtn = document.getElementById('savePacking');
 const loadBtn = document.getElementById('loadPackingBtn');
@@ -172,10 +235,7 @@ function savePacking() {
 
 function loadPacking() {
     const saved = localStorage.getItem('sapporo2026_packing');
-    if (!saved) {
-        // alert('沒有找到儲存的資料');
-        return;
-    }
+    if (!saved) return;
     const states = JSON.parse(saved);
     checkboxes.forEach((cb, i) => {
         cb.checked = states[i] ?? false;
