--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@ function showDetail(day){
     2: `<div class="detail-day">
         <div class="weather-box"><strong>1月31日天氣預測（歷史平均）：</strong> 高溫 -1°C / 低溫 -10°C，輕雪，適合滑雪</div>
         <div class="snow-box"><strong>即時雪況（盤溪滑雪場）：</strong> 積雪深度 100 cm+，粉雪良好，纜車全開（來源：Bankei官網 & Snow-Forecast）</div>
-        <img src="https://images.unsplash.com/photo-1605546146549-4c3c4d6d826a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80" class="hero-img" alt="盤溪滑雪場">
+        <img src="https://resources.matcha-jp.com/resize/720x2000/2018/06/02-55560.webp" class="hero-img" alt="盤溪滑雪場">
         <h2>Day 2　札幌盤溪滑雪場</h2>
         <div class="step"><span class="time">08:30 – 09:15</span>　札幌站免費接駁巴士</div>
         <div class="step"><span class="time">10:00 – 16:00+</span>　租雪具＋滑雪（夜滑至20:00）</div>
         <div class="step"><span class="time">17:30 – 22:30</span>　狸小路逛街＋居酒屋</div>
-        <a href="https://www.bankei.co.jp/en/" target="_blank" class="ticket-link">盤溪滑雪場官網＋雪況</a>
-        <a href="https://www.sapporo-dc.co.jp/ski/bankei/" target="_blank" class="ticket-link">線上購票＋租雪具</a>
+        <a href="https://www.bankei.co.jp/home-english/" target="_blank" class="ticket-link">盤溪滑雪場官網＋雪況</a>
+        <a href="https://www.bankei.co.jp/rental-en/" target="_blank" class="ticket-link">線上購票＋租雪具</a>
         <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Sapporo+Bankei+Ski+Area" target="_blank" class="location-link">路線</a></div></div>`,
 
     3: `<div class="detail-day">
