--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ function showDetail(day){
     2: `<div class="detail-day">
         <div class="weather-box"><strong>1月31日天氣預測（歷史平均）：</strong> 高溫 -1°C / 低溫 -10°C，輕雪，適合滑雪</div>
         <div class="snow-box"><strong>即時雪況（盤溪滑雪場）：</strong> 積雪深度 100 cm+，粉雪良好，纜車全開（來源：Bankei官網 & Snow-Forecast）</div>
-        <img src="https://resources.matcha-jp.com/resize/720x2000/2018/06/02-55560.webp" class="hero-img" alt="盤溪滑雪場">
+        <img src="https://www.skiing-hokkaido.com/img/bankei/map_bg02.jpg" class="hero-img" alt="盤溪滑雪場">
         <h2>Day 2　札幌盤溪滑雪場</h2>
         <div class="step"><span class="time">08:30 – 09:15</span>　札幌站免費接駁巴士</div>
         <div class="step"><span class="time">10:00 – 16:00+</span>　租雪具＋滑雪（夜滑至20:00）</div>
@@ -160,18 +160,18 @@ function showDetail(day){
     3: `<div class="detail-day">
         <div class="weather-box"><strong>2月1日天氣預測（歷史平均）：</strong> 高溫 -2°C / 低溫 -8°C，晴間多雲，完美夜景日</div>
         <div class="snow-box"><strong>即時雪況（盤溪滑雪場）：</strong> 積雪深度 100 cm+，纜車全開，夜滑開放（來源：Bankei官網）</div>
-        <img src="https://images.unsplash.com/photo-1573564971333-2ec6d9c7d9c5?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80" class="hero-img" alt="藻岩山夜景">
+        <img src="https://resources.matcha-jp.com/resize/720x2000/2018/06/02-55560.webp" class="hero-img" alt="藻岩山夜景">
         <h2>Day 3　盤溪滑雪第2天＋藻岩山百萬夜景</h2>
         <div class="step"><span class="time">08:30 – 16:00</span>　盤溪滑雪場</div>
         <div class="step"><span class="time">19:00 – 21:30</span>　藻岩山纜車＋Mini纜車</div>
-        <a href="https://mt-moiwa.jp/en/" target="_blank" class="ticket-link">藻岩山纜車官方（英文）＋線上套票</a>
-        <a href="https://www.klook.com/zh-HK/activity/10036-mount-moiwa-ropeway-ticket-sapporo/" target="_blank" class="ticket-link">Klook 藻岩山纜車票（常有折扣）</a>
+        <a href="https://mt-moiwa.jp/" target="_blank" class="ticket-link">藻岩山纜車官方（英文）＋線上套票</a>
+        <a href="https://www.klook.com/zh-HK/activity/99611-mt-moiwa-ropeway/" target="_blank" class="ticket-link">Klook 藻岩山纜車票（常有折扣）</a>
         <div class="links"><a href="https://www.google.com/maps/place/Mount+Moiwa+Ropeway" target="_blank" class="location-link">藻岩山路線</a></div></div>`,
 
     4: `<div class="detail-day">
         <div class="weather-box"><strong>2月2日天氣預測（歷史平均）：</strong> 高溫 -3°C / 低溫 -9°C，多雲轉晴</div>
         <div class="snow-box"><strong>即時雪況：</strong> 市區積雪 60-80 cm，溫泉區雪景優美（來源：Jozankei官網）</div>
-        <img src="https://images.unsplash.com/photo-1604431514118-5d32c97cc4f8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80" class="hero-img" alt="定山溪溫泉">
+        <img src="https://img.bobblog.tw/webp/2019/Hokkaido/travel/hoheikyo-hot-springs/hoheikyo-hot-springs04.jpg.webp" class="hero-img" alt="定山溪溫泉">
         <h2>Day 4　定山溪溫泉</h2>
         <div class="step"><span class="time">09:30 – 10:30</span>　札幌站搭高速巴士（60分鐘）</div>
         <div class="step"><span class="time">11:00 – 18:00</span>　泡湯＋足湯街＋散步</div>
@@ -183,7 +183,7 @@ function showDetail(day){
     5: `<div class="detail-day">
         <div class="weather-box"><strong>2月3日天氣預測（歷史平均）：</strong> 高溫 -2°C / 低溫 -8°C，輕雪，浪漫小樽日</div>
         <div class="snow-box"><strong>即時雪況：</strong> 小樽運河積雪 50 cm，雪景浪漫（來源：Otaru旅遊網）</div>
-        <img src="https://images.unsplash.com/photo-1542914076-8d07ae7263e9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80" class="hero-img" alt="小樽運河">
+        <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/10/00/a1000055/img/basic/a1000055_main.jpg?20210222182701&q=80" class="hero-img" alt="小樽運河">
         <h2>Day 5　小樽運河全日</h2>
         <div class="step"><span class="time">08:30 – 09:05</span>　JR快速 → 小樽（32分鐘）</div>
         <div class="step"><span class="time">09:15 – </span>　運河、北一硝子館、音樂盒博物館</div>
