--- a/index.html
+++ b/index.html
@@ -60,46 +60,40 @@
 </style>
 </head>
 <body>
-
 <div class="header">
     <h1>2026 札幌雪祭 7 天完美行程（最終版）</h1>
     <p>1月30日 – 2月5日　｜　盤溪滑雪場 + 狸小路夜景 + 藻岩山夜景</p>
 </div>
-
 <div class="tabs">
     <div class="tab-btn active" onclick="openTab('overview')">總覽</div>
     <div class="tab-btn" onclick="openTab('details')">詳細日程表</div>
     <div class="tab-btn" onclick="openTab('packing')">裝備清單</div>
 </div>
-
 <!-- 總覽 -->
 <div id="overview" class="content active">
     <div style="max-width:900px;margin:0 auto;">
         <div class="day"><h2>1月30日 (五) Day 1　抵達＋電視塔夜景</h2><button class="big-btn" onclick="showDetail(1)">查看詳細時間軸</button></div>
-        <div class="day"><h2>1月31日 (六) Day 2　盤溪滑雪場＋狸小路夜景</h2><button class="big-btn" onclick="showDetail(2)">查看詳細時間軸</button></div>
-        <div class="day"><h2>2月1日 (日) Day 3　盤溪滑雪場＋藻岩山夜景</h2><button class="big-btn" onclick="showDetail(3)">查看詳細時間軸</button></div>
-        <div class="day"><h2>2月2日 (一) Day 4　定山溪溫泉放空</h2><button class="big-btn" onclick="showDetail(4)">查看詳細時間軸</button></div>
-        <div class="day"><h2>2月3日 (二) Day 5　小樽運河浪漫一日</h2>
+        <div class="day"><h2>1月31日 (六) Day 2　小樽運河浪漫一日</h2>
             <p style="color:#8B4513;margin:1rem 0;font-size:1.1rem;">下午茶：LeTAO本店　｜　晚餐：世壺屋</p>
-            <button class="big-btn" onclick="showDetail(5)">查看詳細時間軸</button></div>
+            <button class="big-btn" onclick="showDetail(2)">查看詳細時間軸</button></div>
+        <div class="day"><h2>2月1日 (日) Day 3　定山溪溫泉放空</h2><button class="big-btn" onclick="showDetail(3)">查看詳細時間軸</button></div>
+        <div class="day"><h2>2月2日 (一) Day 4　盤溪滑雪場＋藻岩山夜景</h2><button class="big-btn" onclick="showDetail(4)">查看詳細時間軸</button></div>
+        <div class="day"><h2>2月3日 (二) Day 5　盤溪滑雪場＋狸小路夜景</h2><button class="big-btn" onclick="showDetail(5)">查看詳細時間軸</button></div>
         <div class="day" style="border-left:16px solid var(--red);"><h2>2月4日 (三) Day 6　雪祭開幕日狂歡！</h2><button class="big-btn" style="background:var(--red);color:white;" onclick="showDetail(6)">立即查看</button></div>
         <div class="day"><h2>2月5日 (四) Day 7　掃貨＋返程</h2><button class="big-btn" onclick="showDetail(7)">查看詳細時間軸</button></div>
     </div>
-
     <div onclick="window.scrollTo({top:0,behavior:'smooth'})" class="back-top">
         Back to Top
     </div>
 </div>
-
 <!-- 詳細日程表 -->
 <div id="details" class="content">
-    <!-- 新增：返回總覽按鈕 -->
+    <!-- 返回總覽按鈕 -->
     <div onclick="openTab('overview')" class="back-to-overview">
         返回總覽
     </div>
     <div id="detail-content" style="max-width:1000px;margin:0 auto;"></div>
 </div>
-
 <!-- 裝備清單 -->
 <div id="packing" class="content packing-list">
     <h2>北海道1月底-2月初 裝備清單（極寒+滑雪）</h2>
@@ -127,7 +121,6 @@
         <li><input type="checkbox" class="pack-item"> 護唇膏 + 鼻噴劑</li>
     </ul>
 </div>
-
 <script>
 function openTab(tab){
     document.querySelectorAll('.content').forEach(c=>c.classList.remove('active'));
@@ -136,7 +129,6 @@ function openTab(tab){
     document.querySelector(`.tab-btn[onclick="openTab('${tab}')"]`).classList.add('active');
     window.scrollTo({top:0,behavior:'smooth'});
 }
-
 function showDetail(day){
     const details = {
     1: `<div class="detail-day">
@@ -149,47 +141,11 @@ function showDetail(day){
         <div class="step"><span class="time">20:30 – 22:00</span>　札幌電視塔觀景台</div>
         <a href="https://www.tv-tower.co.jp/en/" target="_blank" class="ticket-link">電視塔線上購票（建議提前）</a>
         <div class="links"><a href="https://www.google.com/maps/dir/New+Chitose+Airport/Sapporo+TV+Tower" target="_blank" class="location-link">Google Maps 路線</a></div></div>`,
-
     2: `<div class="detail-day">
-        <div class="weather-box"><strong>1月31日天氣預測（歷史平均）：</strong> 高溫 -1°C / 低溫 -10°C，輕雪，適合滑雪</div>
-        <div class="snow-box"><strong>即時雪況（盤溪滑雪場）：</strong> 積雪深度 100 cm+，粉雪良好，纜車全開（來源：Bankei官網 & Snow-Forecast）</div>
-        <img src="https://www.skiing-hokkaido.com/img/bankei/map_bg02.jpg" class="hero-img" alt="盤溪滑雪場">
-        <h2>Day 2　札幌盤溪滑雪場</h2>
-        <div class="step"><span class="time">08:30 – 09:15</span>　札幌站免費接駁巴士</div>
-        <div class="step"><span class="time">10:00 – 16:00+</span>　租雪具＋滑雪（夜滑至20:00）</div>
-        <div class="step"><span class="time">17:30 – 22:30</span>　狸小路逛街＋居酒屋</div>
-        <a href="https://www.bankei.co.jp/home-english/" target="_blank" class="ticket-link">盤溪滑雪場官網＋雪況</a>
-        <a href="https://www.bankei.co.jp/rental-en/" target="_blank" class="ticket-link">線上購票＋租雪具</a>
-        <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Sapporo+Bankei+Ski+Area" target="_blank" class="location-link">路線</a></div></div>`,
-
-    3: `<div class="detail-day">
-        <div class="weather-box"><strong>2月1日天氣預測（歷史平均）：</strong> 高溫 -2°C / 低溫 -8°C，晴間多雲，完美夜景日</div>
-        <div class="snow-box"><strong>即時雪況（盤溪滑雪場）：</strong> 積雪深度 100 cm+，纜車全開，夜滑開放（來源：Bankei官網）</div>
-        <img src="https://resources.matcha-jp.com/resize/720x2000/2018/06/02-55560.webp" class="hero-img" alt="藻岩山夜景">
-        <h2>Day 3　盤溪滑雪第2天＋藻岩山百萬夜景</h2>
-        <div class="step"><span class="time">08:30 – 16:00</span>　盤溪滑雪場</div>
-        <div class="step"><span class="time">19:00 – 21:30</span>　藻岩山纜車＋Mini纜車</div>
-        <a href="https://mt-moiwa.jp/" target="_blank" class="ticket-link">藻岩山纜車官方（英文）＋線上套票</a>
-        <a href="https://www.klook.com/zh-HK/activity/99611-mt-moiwa-ropeway/" target="_blank" class="ticket-link">Klook 藻岩山纜車票（常有折扣）</a>
-        <div class="links"><a href="https://www.google.com/maps/place/Mount+Moiwa+Ropeway" target="_blank" class="location-link">藻岩山路線</a></div></div>`,
-
-    4: `<div class="detail-day">
-        <div class="weather-box"><strong>2月2日天氣預測（歷史平均）：</strong> 高溫 -3°C / 低溫 -9°C，多雲轉晴</div>
-        <div class="snow-box"><strong>即時雪況：</strong> 市區積雪 60-80 cm，溫泉區雪景優美（來源：Jozankei官網）</div>
-        <img src="https://img.bobblog.tw/webp/2019/Hokkaido/travel/hoheikyo-hot-springs/hoheikyo-hot-springs04.jpg.webp" class="hero-img" alt="定山溪溫泉">
-        <h2>Day 4　定山溪溫泉</h2>
-        <div class="step"><span class="time">09:30 – 10:30</span>　札幌站搭高速巴士（60分鐘）</div>
-        <div class="step"><span class="time">11:00 – 18:00</span>　泡湯＋足湯街＋散步</div>
-        <div class="step"><span class="time">18:30 – </span>　溫泉旅館懷石料理</div>
-        <a href="https://www.jozankei.jp/en/" target="_blank" class="ticket-link">定山溪官方旅遊網（英文）</a>
-        <a href="https://www.klook.com/zh-HK/activity/12748-jozankei-oncen-day-pass-sapporo/" target="_blank" class="ticket-link">Klook 巴士＋溫泉套票</a>
-        <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Jozankei+Onsen" target="_blank" class="location-link">路線</a></div></div>`,
-
-    5: `<div class="detail-day">
-        <div class="weather-box"><strong>2月3日天氣預測（歷史平均）：</strong> 高溫 -2°C / 低溫 -8°C，輕雪，浪漫小樽日</div>
+        <div class="weather-box"><strong>1月31日天氣預測（歷史平均）：</strong> 高溫 -2°C / 低溫 -8°C，輕雪，浪漫小樽日</div>
         <div class="snow-box"><strong>即時雪況：</strong> 小樽運河積雪 50 cm，雪景浪漫（來源：Otaru旅遊網）</div>
         <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/10/00/a1000055/img/basic/a1000055_main.jpg?20210222182701&q=80" class="hero-img" alt="小樽運河">
-        <h2>Day 5　小樽運河全日</h2>
+        <h2>Day 2　小樽運河全日</h2>
         <div class="step"><span class="time">08:30 – 09:05</span>　JR快速 → 小樽（32分鐘）</div>
         <div class="step"><span class="time">09:15 – </span>　運河、北一硝子館、音樂盒博物館</div>
         <div class="step"><span class="time">14:30 – 16:00</span>　<span class="meal">LeTAO本店雙層起司蛋糕</span></div>
@@ -197,7 +153,38 @@ function showDetail(day){
         <a href="https://tabelog.com/tw/hokkaido/A0106/A010601/1070911/" target="_blank" class="ticket-link">世壺屋預約（強烈建議提前1個月）</a>
         <a href="https://www.klook.com/zh-HK/activity/10998-otaru-day-tour-from-sapporo/" target="_blank" class="ticket-link">Klook 小樽一日遊套票</a>
         <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Canal" target="_blank" class="location-link">小樽路線</a></div></div>`,
-
+    3: `<div class="detail-day">
+        <div class="weather-box"><strong>2月1日天氣預測（歷史平均）：</strong> 高溫 -3°C / 低溫 -9°C，多雲轉晴</div>
+        <div class="snow-box"><strong>即時雪況：</strong> 市區積雪 60-80 cm，溫泉區雪景優美（來源：Jozankei官網）</div>
+        <img src="https://img.bobblog.tw/webp/2019/Hokkaido/travel/hoheikyo-hot-springs/hoheikyo-hot-springs04.jpg.webp" class="hero-img" alt="定山溪溫泉">
+        <h2>Day 3　定山溪溫泉</h2>
+        <div class="step"><span class="time">09:30 – 10:30</span>　札幌站搭高速巴士（60分鐘）</div>
+        <div class="step"><span class="time">11:00 – 18:00</span>　泡湯＋足湯街＋散步</div>
+        <div class="step"><span class="time">18:30 – </span>　溫泉旅館懷石料理</div>
+        <a href="https://www.jozankei.jp/en/" target="_blank" class="ticket-link">定山溪官方旅遊網（英文）</a>
+        <a href="https://www.klook.com/zh-HK/activity/12748-jozankei-oncen-day-pass-sapporo/" target="_blank" class="ticket-link">Klook 巴士＋溫泉套票</a>
+        <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Jozankei+Onsen" target="_blank" class="location-link">路線</a></div></div>`,
+    4: `<div class="detail-day">
+        <div class="weather-box"><strong>2月2日天氣預測（歷史平均）：</strong> 高溫 -2°C / 低溫 -8°C，晴間多雲，完美夜景日</div>
+        <div class="snow-box"><strong>即時雪況（盤溪滑雪場）：</strong> 積雪深度 100 cm+，纜車全開，夜滑開放（來源：Bankei官網）</div>
+        <img src="https://resources.matcha-jp.com/resize/720x2000/2018/06/02-55560.webp" class="hero-img" alt="藻岩山夜景">
+        <h2>Day 4　盤溪滑雪場＋藻岩山百萬夜景</h2>
+        <div class="step"><span class="time">08:30 – 16:00</span>　盤溪滑雪場</div>
+        <div class="step"><span class="time">19:00 – 21:30</span>　藻岩山纜車＋Mini纜車</div>
+        <a href="https://mt-moiwa.jp/" target="_blank" class="ticket-link">藻岩山纜車官方（英文）＋線上套票</a>
+        <a href="https://www.klook.com/zh-HK/activity/99611-mt-moiwa-ropeway/" target="_blank" class="ticket-link">Klook 藻岩山纜車票（常有折扣）</a>
+        <div class="links"><a href="https://www.google.com/maps/place/Mount+Moiwa+Ropeway" target="_blank" class="location-link">藻岩山路線</a></div></div>`,
+    5: `<div class="detail-day">
+        <div class="weather-box"><strong>2月3日天氣預測（歷史平均）：</strong> 高溫 -1°C / 低溫 -10°C，輕雪，適合滑雪</div>
+        <div class="snow-box"><strong>即時雪況（盤溪滑雪場）：</strong> 積雪深度 100 cm+，粉雪良好，纜車全開（來源：Bankei官網 & Snow-Forecast）</div>
+        <img src="https://www.skiing-hokkaido.com/img/bankei/map_bg02.jpg" class="hero-img" alt="盤溪滑雪場">
+        <h2>Day 5　札幌盤溪滑雪場＋狸小路夜景</h2>
+        <div class="step"><span class="time">08:30 – 09:15</span>　札幌站免費接駁巴士</div>
+        <div class="step"><span class="time">10:00 – 16:00+</span>　租雪具＋滑雪（夜滑至20:00）</div>
+        <div class="step"><span class="time">17:30 – 22:30</span>　狸小路逛街＋居酒屋</div>
+        <a href="https://www.bankei.co.jp/home-english/" target="_blank" class="ticket-link">盤溪滑雪場官網＋雪況</a>
+        <a href="https://www.bankei.co.jp/rental-en/" target="_blank" class="ticket-link">線上購票＋租雪具</a>
+        <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Sapporo+Bankei+Ski+Area" target="_blank" class="location-link">路線</a></div></div>`,
     6: `<div class="detail-day">
         <div class="weather-box"><strong>2月4日天氣預測（歷史平均）：</strong> 高溫 -3°C / 低溫 -9°C，雪花紛飛，雪祭開幕！</div>
         <div class="snow-box"><strong>即時雪況（雪祭會場）：</strong> 大通公園積雪 80 cm+，雪雕完美（來源：Snowfes官網）</div>
@@ -208,7 +195,6 @@ function showDetail(day){
         <a href="https://www.snowfes.com/en/" target="_blank" class="ticket-link">2026雪祭官方網站（英文）</a>
         <a href="https://www.klook.com/zh-HK/activity/12748-okurayama-viewing-point-sapporo/" target="_blank" class="ticket-link">大倉山夜間點燈雪雕（超推！）</a>
         <div class="links"><a href="https://www.google.com/maps/place/Odori+Park" target="_blank" class="location-link">大通公園地圖</a></div></div>`,
-
     7: `<div class="detail-day">
         <div class="weather-box"><strong>2月5日天氣預測（歷史平均）：</strong> 高溫 -4°C / 低溫 -10°C，多雲</div>
         <div class="snow-box"><strong>即時雪況：</strong> 市區積雪 70 cm，機場雪清潔良好（來源：New Chitose機場）</div>
@@ -220,36 +206,30 @@ function showDetail(day){
         <a href="https://www.new-chitose-airport.jp/en/shop/" target="_blank" class="ticket-link">機場商店地圖＋優惠券</a>
         <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/New+Chitose+Airport" target="_blank" class="location-link">機場路線</a></div></div>`
     };
-
     document.getElementById('detail-content').innerHTML = details[day];
     openTab('details');
 }
-
 // 裝備清單功能
 const checkboxes = document.querySelectorAll('.pack-item');
 const saveBtn = document.getElementById('savePacking');
 const loadBtn = document.getElementById('loadPackingBtn');
 const clearBtn = document.getElementById('clearPacking');
-
 function savePacking() {
     const states = {};
     checkboxes.forEach((cb, i) => states[i] = cb.checked);
     localStorage.setItem('sapporo2026_packing', JSON.stringify(states));
     alert('已儲存！');
 }
-
 function loadPacking() {
     const saved = localStorage.getItem('sapporo2026_packing');
     if (!saved) return;
     const states = JSON.parse(saved);
     checkboxes.forEach((cb, i) => cb.checked = states[i] ?? false);
 }
-
 function clearScreenOnly() {
     checkboxes.forEach(cb => cb.checked = false);
     alert('已取消勾選（備份仍在）');
 }
-
 saveBtn.addEventListener('click', savePacking);
 loadBtn.addEventListener('click', loadPacking);
 clearBtn.addEventListener('click', clearScreenOnly);
